temporarily disabled gradients on mobile due to performance hit / stretching issue

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -904,6 +904,10 @@ aside.creation nav a span {
 	}
 
 @media screen and (max-width: 480px) {
+	body {
+/*		background-size: 100% !important;*/
+		background-image: none;
+	}
 	.Card {
 		display: block !important;
 		max-height: 265px !important;
